tests/neg-custom-args/captures/i21347.check
-- Error: tests/neg-custom-args/captures/i21347.scala:8:15 -------------------------------------------------------------
8 |  () => runOps(f :: Nil) // error
  |               ^
  |               reference (f : () => Unit) is not included in the allowed capture set {}
  |               of an enclosing function literal with expected type () -> Unit
